@@ -1,7 +1,7 @@
 #! /bin/sh
 
 set -x
-aclocal
+aclocal -I config
 # libtoolize --force --copy
 autoheader
 automake --foreign --add-missing --copy
