@@ -74,7 +74,7 @@ the domain name associated with the address on which the connection was
 received. This is intended to be used where multiple domains are served
 by a single authenticator with the same username, such as when
 \fIusername\fP@\fIdomain.com\fP and \fIusername\fP@\fIdomain.net\fP are
-equivalent and served from the same machine.   
+equivalent and served from the same machine.
 This option only takes effect when \fIusername\fP contains a separator,
 which may be `@', `%' or `!'.
 .TP
